--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "expo": "~47.0.9",
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
-    "react-native": "0.70.5"
+    "react-native": "0.70.5",
+    "expo-file-system": "~15.1.1",
+    "expo-linking": "~3.3.0",
+    "react-native-webview": "11.23.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
